Add implementation to product component and property and event binding
-Products component now includes the Product component by the selector
-In the selector of the Product component in html of the Products component I pass the value of the product of the product list where the Product component now displays each product individually along with some light css to make it more visually appealing
-Added a onRemoveProduct function to the Products component which triggers when a Product is clicked where the Product component emits the event that a product has been clicked on

--- a/src/app/products.component.html
+++ b/src/app/products.component.html
@@ -1,1 +1,4 @@
-<h1>Hi, I'm products component</h1>
+<h1>My Products</h1>
+<input *ngIf="!isDisabled" type="text" [(ngModel)]="productName">
+<button *ngIf="!isDisabled" (click)="onAddProduct()">Add product</button>
+<app-product (productClicked)="onRemoveProduct(product)" *ngFor="let product of products" [productName]="product"></app-product>
