Add routing and services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-products></app-products>
+<ul>
+  <li routerLink="/">Home Page</li>
+  <li routerLink="/products">Products</li>
+</ul>
+<router-outlet></router-outlet>
